
101005	More tweaking of the configuration script for compatibility
	with the latest instant oracle client.
	Released 0.10.1.

080430	Oracle driver again: increased the size of the hda to 512 bytes
	for compatibility with 64-bit platforms.
	Released 0.10.0.

080427	Made the Oracle driver build compatible with Oracle Instant Client.

080425	Added db option to oracle url. These are now equivalent:
	oracle:uid=username/password@database
	oracle:uid=username:pwd=password:db=database

080311	Added --disable-shared and --disable-static options to
	the configure script.
	Released 0.9.0.

080307	In sdb.c, function sdb_close: don't call the driver's close
	function if the db is null (i.e. there is nothing to close).

080306	Started integrating Freetds for Microsoft SQL and Sybase.
	Queries are submitted but returned values are not handed
	off to the callback.

080305	Oracle driver updated for 11g.
	Make sure that the Oracle driver treats null values as NULL.
	Released 0.8.0.

080304	Initial support for Ingres.

080229	Added support for shsql/quisp.
	Changed clilen type to socklen_t in sdbd.c.
	Released 0.7.0.

051029	Added -c option to sdb_client to read an sql query from the
	command line rather than interactively.
	Released 0.6.2.

050219	In sdb_query: if the url refers to an already opened connection,
	check that the connection is in fact opened. This is important
	for mistyped urls.
	Released 0.6.1.

050110	Added --platform flag to the configure script.

050110	Added support for Sqlite 3.
	Added another minimal example to the manpage.
	Released 0.6.0.

050109	Dumped automake. Its self-incompatibility drives me nuts!

040506	More bugfixes from Guillaume Cottenceau to the Postgres
	and Mysql drivers: don't segfault if sdb_close is called
	with a NULL argument.
	Released 0.5.5.

040423	Bugfix in the postgres driver: the closer should be called
	sdb_postgres_close. Released 0.5.4.

040421	Patch for persistent Postgres connections from