@@ -1,4 +1,6 @@
 
+150222	Updated config.in.
+
 101005	More tweaking of the configuration script for compatibility
 	with the latest instant oracle client.
 	Released 0.10.1.
